# Basic-Coding-Practices

CPP_language_practice/Arrays/: Declaring_array.cpp  Multidimensional_arrays.cpp
CPP_language_practice/Dynamic memory/: basics.cpp  date_and_time.cpp  dynamic_memory_in_array.cpp
CPP_language_practice/Functions/: Basic_library_functions.cpp  Function_reference_call.cpp  Userdefined_function.cpp
CPP_language_practice/Introduction and basics/: basic_operators.cpp  conditional_operators.cpp  constant_and_literal.cpp  datatype.cpp  datatype_and_variable.cpp  helloworld.cpp  input_and_output.cpp  modifiers_type.cpp  realational_operators.cpp  reference_variable.cpp  type_casting.cpp  variable.cpp
CPP_language_practice/Pointers/: Pointers_arrays.cpp  Pointers_basic.cpp  null_pointers.cpp  void_pointer.cpp
CPP_language_practice/Statements and loops/: for_loop.cpp  (+8 more)
Dart_language_practice/: classes.dart  functions.dart  hello_world.dart  interpolation.dart  types.dart
HTML_language_practice/: anchor.html  basics.html  form.html
JS_language_practice/: photoGallary.html
PHP_language_practice/: functions.php
Python_language_practice/: example.py  temp-plot.html
datastructure/: BST_pre-in_to_post.c  CMakeLists.txt  Untitled1.c  binary_search.c  bubble_sort.c  circularLinkedlist.c  circulardoublyLinkedlist.c  circularqueue.c  doubleendedqueue.c  four-linkedlist.c  heap_sort.c  infixtopostfix.c  insertion_sort.c  linkedlist.c  main.cpp  merge_sort.c  phone_book.c  polynomials.c  priorityqueue.c  quick_sort.c  selection_sort.c  simplequeue.c  spanningTree.c  stack.c
(+274 files in other folders)
